--- a/index.html
+++ b/index.html
@@ -260,8 +260,277 @@
     </div>
 
 
-    
+    <div class="work">
+        <div class="container">
+            <h3 class="text-center fw-bold mt-5" style="font-size: 48px;">PORTOFOLIO</h3>
+            <p class="text-center fw-light text-dark-emphasis">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            <p>
+            <div class="blue-line m-auto mb-5"></div>
+            <div class="row g-4 justify-content-center">
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4">
+                    <div class="card m-0 h-100 border-0 shadow-sm">
+                        <img src="./assets/work-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body p-0 d-flex m-0 px-3 mt-3 justify-content-between">
+                            <div class="mt-3">
+                                <h5 class="card-title">Lorem ipsum dolor</h5>
+                                <a href="#" class=" text-decoration-none fs-12">Web Design</a> <span class="fs-12 "> /
+                                    18 Sep. 2018</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-plus-circle border-0 uniqueicon p-0 "></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4">
+                    <div class="card m-0 h-100 border-0 shadow-sm">
+                        <img src="./assets/work-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body p-0 d-flex m-0 px-3 mt-3 justify-content-between">
+                            <div class="mt-3">
+                                <h5 class="card-title">Loreda Cuno Nere</h5>
+                                <a href="#" class=" text-decoration-none fs-12">Web Design</a> <span class="fs-12 "> /
+                                    18 Sep. 2018</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-plus-circle border-0 uniqueicon p-0 "></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4">
+                    <div class="card m-0 h-100 border-0 shadow-sm">
+                        <img src="./assets/work-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body p-0 d-flex m-0 px-3 mt-3 justify-content-between">
+                            <div class="mt-3">
+                                <h5 class="card-title">Mavrito Lana Dere</h5>
+                                <a href="#" class=" text-decoration-none fs-12">Web Design</a> <span class="fs-12 "> /
+                                    18 Sep. 2018</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-plus-circle border-0 uniqueicon p-0 "></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4">
+                    <div class="card m-0 h-100 border-0 shadow-sm">
+                        <img src="./assets/work-4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body p-0 d-flex m-0 px-3 mt-3 justify-content-between">
+                            <div class="mt-3">
+                                <h5 class="card-title">Bindo Laro Cado</h5>
+                                <a href="#" class=" text-decoration-none fs-12">Web Design</a> <span class="fs-12 "> /
+                                    18 Sep. 2018</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-plus-circle border-0 uniqueicon p-0 "></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4">
+                    <div class="card m-0 h-100 border-0 shadow-sm">
+                        <img src="./assets/work-5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body p-0 d-flex m-0 px-3 mt-3 justify-content-between">
+                            <div class="mt-3">
+                                <h5 class="card-title">Studio Lena Mado</h5>
+                                <a href="#" class=" text-decoration-none fs-12">Web Design</a> <span class="fs-12 "> /
+                                    18 Sep. 2018</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-plus-circle border-0 uniqueicon p-0 "></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4">
+                    <div class="card m-0 h-100 border-0 shadow-sm">
+                        <img src="./assets/work-6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body p-0 d-flex m-0 mt-3 px-3 justify-content-between">
+                            <div class="mt-3">
+                                <h5 class="card-title">Studio Big Bang</h5>
+                                <a href="#" class=" text-decoration-none fs-12">Web Design</a> <span class="fs-12 "> /
+                                    18 Sep. 2018</span>
+                            </div>
+                            <div>
+                                <i class="bi bi-plus-circle border-0 uniqueicon p-0 "></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </div>
+
+
+
+    <div class="blue-section-two">
+        <div class="container">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+
+
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active pb-5 text-center text-white" data-bs-interval="2000">
+                        <img src="./assets/testimonial-2.jpg" class="mb-3" alt="...">
+                        <h3 class="fw-semibold fs-4 mb-3">XAVI ALONSO</h3>
+                        <p class="fs-5 w-70 mb-4 fw-light text-center m-auto">Curabitur arcu erat, accumsan id imperdiet
+                            et, porttitor at sem. Lorem ipsum dolor sit amet,
+                            consectetur adipiscing elit.
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="carousel-indicators edit-but">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="blog" id="blog">
+
+        <div class="container">
+
+            <h3 class="text-center fw-bold mt-5" style="font-size: 48px;">BLOG</h3>
+            <p class="text-center fw-light text-dark-emphasis">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            <p>
+            <div class="blue-line m-auto mb-5"></div>
+
+            <div class="row row-cols-1 row-cols-md-1 row-cols-lg-3 g-4">
+
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./assets/post-1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body position-relative">
+                            <h5 class="card-title mt-3">See more ideas about Travel</h5>
+                            <p class="card-text text-dark-emphasis">Proin eget tortor risus. Pellentesque in ipsum id
+                                orci porta
+                                dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+                            <h6 class="blue-square translate-middle">TRAVEL</h6>
+                        </div>
+                        <div class="card-footer">
+                            <img src="./assets/testimonial-2.jpg" style="width: 10%; border-radius: 50%;" />
+                            <a href="" class="text-dark text-decoration-none me-5">Morgan Freeman</a>
+                            <span class="text-dark-emphasis ms-5"><i class="fa-regular fa-clock"></i> 10 min</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./assets/post-2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body position-relative">
+                            <h5 class="card-title mt-3">See more ideas about Travel</h5>
+                            <p class="card-text text-dark-emphasis">Proin eget tortor risus. Pellentesque in ipsum id
+                                orci porta
+                                dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+                            <h6 class="blue-square b2 translate-middle">WEB DESIGN</h6>
+                        </div>
+                        <div class="card-footer">
+                            <img src="./assets/testimonial-2.jpg" style="width: 10%; border-radius: 50%;" />
+                            <a href="" class="text-dark text-decoration-none me-5">Morgan Freeman</a>
+                            <span class="text-dark-emphasis ms-5"><i class="fa-regular fa-clock"></i> 10 min</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="./assets/post-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body position-relative">
+                            <h5 class="card-title mt-3">See more ideas about Travel</h5>
+                            <p class="card-text text-dark-emphasis">Proin eget tortor risus. Pellentesque in ipsum id
+                                orci porta
+                                dapibus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
+                            <h6 class="blue-square b2 translate-middle">WEB DESIGN</h6>
+                        </div>
+                        <div class="card-footer">
+                            <img src="./assets/testimonial-2.jpg" style="width: 10%; border-radius: 50%;" />
+                            <a href="" class="text-dark text-decoration-none me-5">Morgan Freeman</a>
+                            <span class="text-dark-emphasis ms-5"><i class="fa-regular fa-clock"></i> 10 min</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="contact" id="contact">
+
+        <div class="container">
+
+            <div class="contact-parent py-5 row bg-white shadow g-0 row-gap-5">
+
+                <div class="col-md-6 pe-4 ">
+                    <h5 class="fw-medium fs-2 lh-base mb-5">Send Message Us</h5>
+
+                    <form>
+                        <div class="mb-3">
+                            <input type="text" class="form-control " id="floatingName" placeholder="Your Name" required>
+                        </div>
+
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="floatingEmail" placeholder="Your Email"
+                                required>
+                        </div>
+
+                        <div class="mb-3">
+                            <input type="text" class="form-control" id="floatingSubject" placeholder="Subject" required>
+                        </div>
+
+                        <div class="mb-4">
+                            <textarea class="form-control" id="floatingTextarea2" placeholder="Message"
+                                style="min-height: 120px" required></textarea>
+                        </div>
+
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-primary btn-lg rounded-5 ">Send Message</button>
+                        </div>
+                    </form>
+
+                </div>
+
+                <div class="col-md-6">
+                    <h5 class="fw-medium fs-2 lh-base mb-5">Get in Touch</h5>
+                    <p class="fs-5 fw-light text-dark-emphasis mb-3">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Facilis dolorum dolorem soluta quidem expedita aperiam aliquid at. Totam magni ipsum
+                        suscipit amet? Autem nemo esse laboriosam ratione nobis mollitia inventore?</p>
+                    <p class="text-dark-emphasis mb-2"><i class="bi bi-geo-alt pe-3 text-primary"></i>329 WASHINGTON ST
+                        BOSTON, MA 02108</p>
+                    <p class="text-dark-emphasis mb-2"><i class="bi bi-phone pe-3 text-primary"></i>(617) 557-0089
+                    </p>
+                    <p class="text-dark-emphasis mb-4"><i
+                            class="bi bi-envelope pe-3  text-primary"></i>contact@example.com
+                    </p>
+                    <i class="fa-brands fa-facebook me-2 fs-5 co-ico"></i>
+                    <i class="fa-brands fa-instagram me-2 fs-5 co-ico"></i>
+                    <i class="fa-brands fa-twitter me-2 fs-5 co-ico"></i>
+                    <i class="fa-brands fa-linkedin me-2 fs-5 co-ico"></i>
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </div>
+
+
+    <div class="footer text-white fs-6">
+        <div class="text-center mb-0">
+          <p class="mb-1">© Copyright <b>DevFolio</b>. All Rights Reserved</p>
+          <p>Designed by <a class="text-decoration-none text-white" href="#home">BootstrapMade</a></p>
+        </div>
+      </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
